@@ -6,6 +6,9 @@
 	  - Error messages improved.
 	* tests/{common.h datachunk.h, decoder.h, rscode.h, rsecc_decoder.h}:
 	  - Reserved macro names are replaced.
+	* bitstream.[ch]:
+	  - Some variables' type changed from int to size_t. (closing #89 and
+	    #102)
 
 2017.09.29 Kentaro Fukuchi <kentaro@fukuchi.org>
 	[4.0]
